--- a/Копия katalog-line.html
+++ b/Копия katalog-line.html
@@ -17,7 +17,7 @@
           <div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
               <div class="col-md-2 col-lg-1">
-                <div class="logo d-none d-md-block"><a href="index.html"><img src="static/img/content/logo.png" alt="logo"></a></div>
+                <div class="logo d-none d-md-block"><img src="static/img/content/logo.png" alt="logo"></div>
               </div>
               <div class="col-2 col-md-6 col-lg-6 col-xl-4">
                 <ul class="header-nav d-none d-md-block">
@@ -116,9 +116,9 @@
                       <option id="sort" value="">Сортировать по названию</option>
                     </select>
                   </div>
-                  <div class="tabs-list"><a class="tabs-item" href="katalog-coub.html"><svg width="100%" height="100%" viewBox="0 0 17 16">
+                  <div class="tabs-list"><a class="tabs-item" href="#"><svg width="100%" height="100%" viewBox="0 0 17 16">
 <path id="Tiles-Big-Icon" serif:id="Tiles Big Icon" d="M14.957,16l-4.87,0c-0.576,0 -1.043,-0.468 -1.043,-1.044l0,-4.869c0,-0.576 0.467,-1.043 1.043,-1.043l4.87,0c0.576,0 1.043,0.467 1.043,1.043l0,4.869c0,0.576 -0.467,1.044 -1.043,1.044Zm0,-9.044l-4.87,0c-0.576,0 -1.043,-0.467 -1.043,-1.043l0,-4.87c0,-0.576 0.467,-1.043 1.043,-1.043l4.87,0c0.576,0 1.043,0.467 1.043,1.043l0,4.87c0,0.576 -0.467,1.043 -1.043,1.043Zm-9.044,9.044l-4.869,0c-0.577,0 -1.044,-0.468 -1.044,-1.044l0,-4.869c0,-0.576 0.467,-1.043 1.044,-1.043l4.869,0c0.576,0 1.044,0.467 1.044,1.043l0,4.869c0,0.576 -0.468,1.044 -1.044,1.044Zm0,-9.044l-4.869,0c-0.577,0 -1.044,-0.467 -1.044,-1.043l0,-4.87c0,-0.576 0.467,-1.043 1.044,-1.043l4.869,0c0.576,0 1.044,0.467 1.044,1.043l0,4.87c0,0.576 -0.468,1.043 -1.044,1.043Z"/>
-</svg></a><a class="tabs-item active" href="katalog-line.html"><svg width="100%" height="100%" viewBox="0 0 16 14">
+</svg></a><a class="tabs-item active" href="#"><svg width="100%" height="100%" viewBox="0 0 16 14">
 <path id="List-Icon" serif:id="List Icon" d="M15,10l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1.001 1,-1.001l10,0c0.552,0 1,0.448 1,1.001c0,0.552 -0.448,1 -1,1Zm0,-4l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1l10,0c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1Zm0,-4l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.552 0.448,-1 1,-1l10,0c0.552,0 1,0.448 1,1c0,0.552 -0.448,1 -1,1Zm-14,12c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1Zm0,-4c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1.001 1,-1.001c0.552,0 1,0.448 1,1.001c0,0.552 -0.448,1 -1,1Zm0,-4c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1Zm0,-4c-0.552,0 -1,-0.448 -1,-1c0,-0.552 0.448,-1 1,-1c0.552,0 1,0.448 1,1c0,0.552 -0.448,1 -1,1Zm4,10l10,0c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1Z"/>
 </svg></a></div>
                   <div class="basket"><img src="static/img/general/bag-green.png" alt="Basket"></div>
@@ -126,13 +126,6 @@
                   <div class="search-content__sort">
                     <input class="search-input" type="text" name="text" placeholder="Поиск по каталогу">
                   </div>
-                </div>
-                <div class="basket-content">
-                  <div class="basket-title"><span class="basket-count">3 товара </span><span>в корзине</span></div>
-                  <div class="basket-item"><span class="basket-item__name">Праймер битумный (20л/16кг) </span><span>* </span><span class="basket-item__price">1080</span><img class="basket-item__delete" src="static/img/content/bag-delete.png" alt="Bag-delete"></div>
-                  <div class="basket-item"><span class="basket-item__name">Газоблоки D 500 (1,3м3) 600*3... </span><span>* </span><span class="basket-item__price">5100</span><img class="basket-item__delete" src="static/img/content/bag-delete.png" alt="Bag-delete"></div>
-                  <div class="basket-item"><span class="basket-item__name">Газоблоки D 500 (1,3м3) 600*3... </span><span>* </span><span class="basket-item__price">5200</span><img class="basket-item__delete" src="static/img/content/bag-delete.png" alt="Bag-delete"></div>
-                  <div class="basket-result"><span>Total: </span><span class="basket-result__price">11 380</span><a class="buy" href="#">Оформить</a></div>
                 </div>
                 <div class="katalog-products">
                   <div class="product-line">
