--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
               <div class="col-md-2 col-lg-1">
-                <div class="logo d-none d-md-block"><img src="static/img/content/logo.png" alt="logo"></div>
+                <div class="logo d-none d-md-block"><a href="index.html"><img src="static/img/content/logo.png" alt="logo"></a></div>
               </div>
               <div class="col-2 col-md-6 col-lg-6 col-xl-4">
                 <ul class="header-nav d-none d-md-block">
