--- a/katalog-coub.html
+++ b/katalog-coub.html
@@ -116,9 +116,9 @@
                       <option id="sort" value="">Сортировать по названию</option>
                     </select>
                   </div>
-                  <div class="tabs-list"><a class="tabs-item" href="katalog-coub.html"><svg width="100%" height="100%" viewBox="0 0 17 16">
+                  <div class="tabs-list"><a class="tabs-item active" href="katalog-coub.html"><svg width="100%" height="100%" viewBox="0 0 17 16">
 <path id="Tiles-Big-Icon" serif:id="Tiles Big Icon" d="M14.957,16l-4.87,0c-0.576,0 -1.043,-0.468 -1.043,-1.044l0,-4.869c0,-0.576 0.467,-1.043 1.043,-1.043l4.87,0c0.576,0 1.043,0.467 1.043,1.043l0,4.869c0,0.576 -0.467,1.044 -1.043,1.044Zm0,-9.044l-4.87,0c-0.576,0 -1.043,-0.467 -1.043,-1.043l0,-4.87c0,-0.576 0.467,-1.043 1.043,-1.043l4.87,0c0.576,0 1.043,0.467 1.043,1.043l0,4.87c0,0.576 -0.467,1.043 -1.043,1.043Zm-9.044,9.044l-4.869,0c-0.577,0 -1.044,-0.468 -1.044,-1.044l0,-4.869c0,-0.576 0.467,-1.043 1.044,-1.043l4.869,0c0.576,0 1.044,0.467 1.044,1.043l0,4.869c0,0.576 -0.468,1.044 -1.044,1.044Zm0,-9.044l-4.869,0c-0.577,0 -1.044,-0.467 -1.044,-1.043l0,-4.87c0,-0.576 0.467,-1.043 1.044,-1.043l4.869,0c0.576,0 1.044,0.467 1.044,1.043l0,4.87c0,0.576 -0.468,1.043 -1.044,1.043Z"/>
-</svg></a><a class="tabs-item active" href="katalog-line.html"><svg width="100%" height="100%" viewBox="0 0 16 14">
+</svg></a><a class="tabs-item" href="katalog-line.html"><svg width="100%" height="100%" viewBox="0 0 16 14">
 <path id="List-Icon" serif:id="List Icon" d="M15,10l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1.001 1,-1.001l10,0c0.552,0 1,0.448 1,1.001c0,0.552 -0.448,1 -1,1Zm0,-4l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1l10,0c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1Zm0,-4l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.552 0.448,-1 1,-1l10,0c0.552,0 1,0.448 1,1c0,0.552 -0.448,1 -1,1Zm-14,12c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1Zm0,-4c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1.001 1,-1.001c0.552,0 1,0.448 1,1.001c0,0.552 -0.448,1 -1,1Zm0,-4c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1Zm0,-4c-0.552,0 -1,-0.448 -1,-1c0,-0.552 0.448,-1 1,-1c0.552,0 1,0.448 1,1c0,0.552 -0.448,1 -1,1Zm4,10l10,0c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1Z"/>
 </svg></a></div>
                   <div class="basket"><img src="static/img/general/bag-green.png" alt="Basket"></div>
@@ -135,118 +135,186 @@
                   <div class="basket-result"><span>Total: </span><span class="basket-result__price">11 380</span><a class="buy" href="#">Оформить</a></div>
                 </div>
                 <div class="katalog-products">
-                  <div class="product-line">
-                    <div class="product-img"><img src="static/img/content/product-img.png" alt="product-img"></div>
-                    <div class="product-title">
-                      <p>МАСТИКА МБГ (20КГ/15Л)</p>
-                      <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
-                    </div>
-                    <div class="product-active">
-                      <div class="product-counter">
-                        <input type="text" name="text" placeholder="1">
-                        <label class="up" for="up">
-                          <input id="up" type="submit" value="">
-                        </label>
-                        <label class="down" for="down">
-                          <input id="down" type="submit" value="">
-                        </label>
+                  <div class="row">
+                    <div class="col-4">
+                      <div class="product-coub">
+                        <div class="product-img"><img src="static/img/content/product-img2.png" alt="product-img"></div>
+                        <div class="product-title">
+                          <p>МАСТИКА МБГ (20КГ/15Л)</p>
+                        </div>
+                        <div class="product-active">
+                          <div class="product-counter">
+                            <input type="text" name="text" placeholder="1">
+                            <label class="up" for="up">
+                              <input id="up" type="submit" value="">
+                            </label>
+                            <label class="down" for="down">
+                              <input id="down" type="submit" value="">
+                            </label>
+                          </div>
+                          <div class="product-price"><a href="#">1080,00 руб</a></div>
+                        </div>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
                     </div>
-                  </div>
-                  <div class="product-line">
-                    <div class="product-img"><img src="static/img/content/product-img.png" alt="product-img"></div>
-                    <div class="product-title">
-                      <p>МАСТИКА МБГ (20КГ/15Л)</p>
-                      <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
-                    </div>
-                    <div class="product-active">
-                      <div class="product-counter">
-                        <input type="text" name="text" placeholder="1">
-                        <label class="up" for="up">
-                          <input id="up" type="submit" value="">
-                        </label>
-                        <label class="down" for="down">
-                          <input id="down" type="submit" value="">
-                        </label>
+                    <div class="col-4">
+                      <div class="product-coub">
+                        <div class="product-img"><img src="static/img/content/product-img2.png" alt="product-img"></div>
+                        <div class="product-title">
+                          <p>МАСТИКА МБГ (20КГ/15Л)</p>
+                        </div>
+                        <div class="product-active">
+                          <div class="product-counter">
+                            <input type="text" name="text" placeholder="1">
+                            <label class="up" for="up">
+                              <input id="up" type="submit" value="">
+                            </label>
+                            <label class="down" for="down">
+                              <input id="down" type="submit" value="">
+                            </label>
+                          </div>
+                          <div class="product-price"><a href="#">1080,00 руб</a></div>
+                        </div>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
                     </div>
-                  </div>
-                  <div class="product-line">
-                    <div class="product-img"><img src="static/img/content/product-img.png" alt="product-img"></div>
-                    <div class="product-title">
-                      <p>МАСТИКА МБГ (20КГ/15Л)</p>
-                      <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
-                    </div>
-                    <div class="product-active">
-                      <div class="product-counter">
-                        <input type="text" name="text" placeholder="1">
-                        <label class="up" for="up">
-                          <input id="up" type="submit" value="">
-                        </label>
-                        <label class="down" for="down">
-                          <input id="down" type="submit" value="">
-                        </label>
+                    <div class="col-4">
+                      <div class="product-coub">
+                        <div class="product-img"><img src="static/img/content/product-img2.png" alt="product-img"></div>
+                        <div class="product-title">
+                          <p>МАСТИКА МБГ (20КГ/15Л)</p>
+                        </div>
+                        <div class="product-active">
+                          <div class="product-counter">
+                            <input type="text" name="text" placeholder="1">
+                            <label class="up" for="up">
+                              <input id="up" type="submit" value="">
+                            </label>
+                            <label class="down" for="down">
+                              <input id="down" type="submit" value="">
+                            </label>
+                          </div>
+                          <div class="product-price"><a href="#">1080,00 руб</a></div>
+                        </div>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
                     </div>
-                  </div>
-                  <div class="product-line">
-                    <div class="product-img"><img src="static/img/content/product-img.png" alt="product-img"></div>
-                    <div class="product-title">
-                      <p>МАСТИКА МБГ (20КГ/15Л)</p>
-                      <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
-                    </div>
-                    <div class="product-active">
-                      <div class="product-counter">
-                        <input type="text" name="text" placeholder="1">
-                        <label class="up" for="up">
-                          <input id="up" type="submit" value="">
-                        </label>
-                        <label class="down" for="down">
-                          <input id="down" type="submit" value="">
-                        </label>
+                    <div class="col-4">
+                      <div class="product-coub">
+                        <div class="product-img"><img src="static/img/content/product-img2.png" alt="product-img"></div>
+                        <div class="product-title">
+                          <p>МАСТИКА МБГ (20КГ/15Л)</p>
+                        </div>
+                        <div class="product-active">
+                          <div class="product-counter">
+                            <input type="text" name="text" placeholder="1">
+                            <label class="up" for="up">
+                              <input id="up" type="submit" value="">
+                            </label>
+                            <label class="down" for="down">
+                              <input id="down" type="submit" value="">
+                            </label>
+                          </div>
+                          <div class="product-price"><a href="#">1080,00 руб</a></div>
+                        </div>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
                     </div>
-                  </div>
-                  <div class="product-line">
-                    <div class="product-img"><img src="static/img/content/product-img.png" alt="product-img"></div>
-                    <div class="product-title">
-                      <p>МАСТИКА МБГ (20КГ/15Л)</p>
-                      <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
-                    </div>
-                    <div class="product-active">
-                      <div class="product-counter">
-                        <input type="text" name="text" placeholder="1">
-                        <label class="up" for="up">
-                          <input id="up" type="submit" value="">
-                        </label>
-                        <label class="down" for="down">
-                          <input id="down" type="submit" value="">
-                        </label>
+                    <div class="col-4">
+                      <div class="product-coub">
+                        <div class="product-img"><img src="static/img/content/product-img2.png" alt="product-img"></div>
+                        <div class="product-title">
+                          <p>МАСТИКА МБГ (20КГ/15Л)</p>
+                        </div>
+                        <div class="product-active">
+                          <div class="product-counter">
+                            <input type="text" name="text" placeholder="1">
+                            <label class="up" for="up">
+                              <input id="up" type="submit" value="">
+                            </label>
+                            <label class="down" for="down">
+                              <input id="down" type="submit" value="">
+                            </label>
+                          </div>
+                          <div class="product-price"><a href="#">1080,00 руб</a></div>
+                        </div>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
                     </div>
-                  </div>
-                  <div class="product-line">
-                    <div class="product-img"><img src="static/img/content/product-img.png" alt="product-img"></div>
-                    <div class="product-title">
-                      <p>МАСТИКА МБГ (20КГ/15Л)</p>
-                      <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
-                    </div>
-                    <div class="product-active">
-                      <div class="product-counter">
-                        <input type="text" name="text" placeholder="1">
-                        <label class="up" for="up">
-                          <input id="up" type="submit" value="">
-                        </label>
-                        <label class="down" for="down">
-                          <input id="down" type="submit" value="">
-                        </label>
+                    <div class="col-4">
+                      <div class="product-coub">
+                        <div class="product-img"><img src="static/img/content/product-img2.png" alt="product-img"></div>
+                        <div class="product-title">
+                          <p>МАСТИКА МБГ (20КГ/15Л)</p>
+                        </div>
+                        <div class="product-active">
+                          <div class="product-counter">
+                            <input type="text" name="text" placeholder="1">
+                            <label class="up" for="up">
+                              <input id="up" type="submit" value="">
+                            </label>
+                            <label class="down" for="down">
+                              <input id="down" type="submit" value="">
+                            </label>
+                          </div>
+                          <div class="product-price"><a href="#">1080,00 руб</a></div>
+                        </div>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
+                    </div>
+                    <div class="col-4">
+                      <div class="product-coub">
+                        <div class="product-img"><img src="static/img/content/product-img2.png" alt="product-img"></div>
+                        <div class="product-title">
+                          <p>МАСТИКА МБГ (20КГ/15Л)</p>
+                        </div>
+                        <div class="product-active">
+                          <div class="product-counter">
+                            <input type="text" name="text" placeholder="1">
+                            <label class="up" for="up">
+                              <input id="up" type="submit" value="">
+                            </label>
+                            <label class="down" for="down">
+                              <input id="down" type="submit" value="">
+                            </label>
+                          </div>
+                          <div class="product-price"><a href="#">1080,00 руб</a></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="product-coub">
+                        <div class="product-img"><img src="static/img/content/product-img2.png" alt="product-img"></div>
+                        <div class="product-title">
+                          <p>МАСТИКА МБГ (20КГ/15Л)</p>
+                        </div>
+                        <div class="product-active">
+                          <div class="product-counter">
+                            <input type="text" name="text" placeholder="1">
+                            <label class="up" for="up">
+                              <input id="up" type="submit" value="">
+                            </label>
+                            <label class="down" for="down">
+                              <input id="down" type="submit" value="">
+                            </label>
+                          </div>
+                          <div class="product-price"><a href="#">1080,00 руб</a></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-4">
+                      <div class="product-coub">
+                        <div class="product-img"><img src="static/img/content/product-img2.png" alt="product-img"></div>
+                        <div class="product-title">
+                          <p>МАСТИКА МБГ (20КГ/15Л)</p>
+                        </div>
+                        <div class="product-active">
+                          <div class="product-counter">
+                            <input type="text" name="text" placeholder="1">
+                            <label class="up" for="up">
+                              <input id="up" type="submit" value="">
+                            </label>
+                            <label class="down" for="down">
+                              <input id="down" type="submit" value="">
+                            </label>
+                          </div>
+                          <div class="product-price"><a href="#">1080,00 руб</a></div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
