--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-12">
-              <div class="sub-line d-none d-md-block"><img src="static/img/sprite/line.png" alt="line"></div>
+              <div class="sub-line d-none d-md-block"><img src="static/img/content/line.png" alt="line"></div>
             </div>
             <div class="col-12 col-sm-8 col-md-6 col-lg-4">
               <div class="sub-content">
