--- a/katalog-line.html
+++ b/katalog-line.html
@@ -11,7 +11,7 @@
     </title>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper bg-gray">
       <header>
         <div class="header">
           <div class="container h-100">
