--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                       </nav>
                     </li>
                     <li>
-                      <nav id="logo-content"><img src="static/img/content/logo.png" alt="logo">
+                      <nav id="logo-content"><a href="index.html"><img src="static/img/content/logo.png" alt="logo"></a>
                         <p>База строительных материалов</p>
                       </nav>
                     </li>
-                    <li><a class="header-nav__link" href="#">Каталог</a></li>
+                    <li><a class="header-nav__link" href="katalog-line.html">Каталог</a></li>
                     <li><a class="header-nav__link" href="#">О компании</a></li>
                     <li><a class="header-nav__link" href="#">Оптовикам</a></li>
                     <li><a class="header-nav__link" href="#">Доставка</a></li>
@@ -67,8 +67,27 @@
                 <div class="call"><a class="call-phone" href="#"> +7 (342) 281 12 77</a><a class="g-btn" href="#">Обратный звонок</a></div>
               </div>
               <div class="col-2 col-sm-1 d-block d-lg-none">
-                <div class="bag"><img src="static/img/general/bag.png" alt="bag"><span class="count-bag__head">0</span></div>
+                <div class="basket-head"><img class="bag-clear" src="static/img/general/bag-clear.png" alt="Bag-clear"><img class="bag-full" src="static/img/general/bag-add.png" alt="Bag-add"></div>
               </div>
+            </div>
+            <div class="basket-content__head">
+              <div class="basket-title"><span class="basket-count">3 товара </span><span>в корзине</span></div>
+              <div class="basket-item"><span class="basket-item__name">Праймер битумный (20л/16кг) </span><span>* </span><span class="basket-item__price">1080</span>
+                <svg class="basket-item__delete" width="100%" height="100%" viewBox="0 0 16 16">
+                  <path id="Trash-Icon" serif:id="Trash Icon" d="M14,5l-1,0l0,9.999c0,0.553 -0.448,1.001 -1,1.001l-9,0c-0.552,0 -1,-0.448 -1,-1.001l0,-9.999l-1,0c-0.552,0 -1,-0.447 -1,-1c0,-0.552 0.448,-1 1,-1l3.05,0c0.245,-1.694 1.688,-3 3.45,-3c1.762,0 3.205,1.306 3.45,3l3.05,0c0.552,0 1,0.448 1,1c0,0.553 -0.448,1 -1,1Zm-7,9l1,0l0,-8l-1,0l0,8Zm-2,-8l-1,0l0,8l1,0l0,-8Zm2.5,-4.5c-0.931,0 -1.706,0.638 -1.929,1.5l3.858,0c-0.223,-0.862 -0.998,-1.5 -1.929,-1.5Zm3.5,4.5l-1,0l0,8l1,0l0,-8Z"></path>
+                </svg>
+              </div>
+              <div class="basket-item"><span class="basket-item__name">Газоблоки D 500 (1,3м3) 600*3 </span><span>* </span><span class="basket-item__price">5100</span>
+                <svg class="basket-item__delete" width="100%" height="100%" viewBox="0 0 16 16">
+                  <path id="Trash-Icon" serif:id="Trash Icon" d="M14,5l-1,0l0,9.999c0,0.553 -0.448,1.001 -1,1.001l-9,0c-0.552,0 -1,-0.448 -1,-1.001l0,-9.999l-1,0c-0.552,0 -1,-0.447 -1,-1c0,-0.552 0.448,-1 1,-1l3.05,0c0.245,-1.694 1.688,-3 3.45,-3c1.762,0 3.205,1.306 3.45,3l3.05,0c0.552,0 1,0.448 1,1c0,0.553 -0.448,1 -1,1Zm-7,9l1,0l0,-8l-1,0l0,8Zm-2,-8l-1,0l0,8l1,0l0,-8Zm2.5,-4.5c-0.931,0 -1.706,0.638 -1.929,1.5l3.858,0c-0.223,-0.862 -0.998,-1.5 -1.929,-1.5Zm3.5,4.5l-1,0l0,8l1,0l0,-8Z"></path>
+                </svg>
+              </div>
+              <div class="basket-item"><span class="basket-item__name">Газоблоки D 500 (1,3м3) 600*3 </span><span>* </span><span class="basket-item__price">5200</span>
+                <svg class="basket-item__delete" width="100%" height="100%" viewBox="0 0 16 16">
+                  <path id="Trash-Icon" serif:id="Trash Icon" d="M14,5l-1,0l0,9.999c0,0.553 -0.448,1.001 -1,1.001l-9,0c-0.552,0 -1,-0.448 -1,-1.001l0,-9.999l-1,0c-0.552,0 -1,-0.447 -1,-1c0,-0.552 0.448,-1 1,-1l3.05,0c0.245,-1.694 1.688,-3 3.45,-3c1.762,0 3.205,1.306 3.45,3l3.05,0c0.552,0 1,0.448 1,1c0,0.553 -0.448,1 -1,1Zm-7,9l1,0l0,-8l-1,0l0,8Zm-2,-8l-1,0l0,8l1,0l0,-8Zm2.5,-4.5c-0.931,0 -1.706,0.638 -1.929,1.5l3.858,0c-0.223,-0.862 -0.998,-1.5 -1.929,-1.5Zm3.5,4.5l-1,0l0,8l1,0l0,-8Z"></path>
+                </svg>
+              </div>
+              <div class="basket-result"><span>Total: </span><span class="basket-result__price">11 380</span><a class="buy" href="#">Оформить</a></div>
             </div>
           </div>
         </div>
@@ -87,9 +106,28 @@
               <li><a class="nav-list__link" href="#">Инструмент</a></li>
               <li><a class="nav-list__link" href="#">Спецодежда</a></li>
               <li>
-                <div class="bag"><img src="static/img/general/bag.png" alt="bag"><span class="count-bag">0</span></div>
+                <div class="basket"><img class="bag-clear" src="static/img/general/bag-clear.png" alt="Bag-clear"><img class="bag-full" src="static/img/general/bag-add.png" alt="Bag-add"></div>
               </li>
             </ul>
+            <div class="basket-content">
+              <div class="basket-title"><span class="basket-count">3 товара </span><span>в корзине</span></div>
+              <div class="basket-item"><span class="basket-item__name">Праймер битумный (20л/16кг) </span><span>* </span><span class="basket-item__price">1080</span>
+                <svg class="basket-item__delete" width="100%" height="100%" viewBox="0 0 16 16">
+                  <path id="Trash-Icon" serif:id="Trash Icon" d="M14,5l-1,0l0,9.999c0,0.553 -0.448,1.001 -1,1.001l-9,0c-0.552,0 -1,-0.448 -1,-1.001l0,-9.999l-1,0c-0.552,0 -1,-0.447 -1,-1c0,-0.552 0.448,-1 1,-1l3.05,0c0.245,-1.694 1.688,-3 3.45,-3c1.762,0 3.205,1.306 3.45,3l3.05,0c0.552,0 1,0.448 1,1c0,0.553 -0.448,1 -1,1Zm-7,9l1,0l0,-8l-1,0l0,8Zm-2,-8l-1,0l0,8l1,0l0,-8Zm2.5,-4.5c-0.931,0 -1.706,0.638 -1.929,1.5l3.858,0c-0.223,-0.862 -0.998,-1.5 -1.929,-1.5Zm3.5,4.5l-1,0l0,8l1,0l0,-8Z"></path>
+                </svg>
+              </div>
+              <div class="basket-item"><span class="basket-item__name">Газоблоки D 500 (1,3м3) 600*3 </span><span>* </span><span class="basket-item__price">5100</span>
+                <svg class="basket-item__delete" width="100%" height="100%" viewBox="0 0 16 16">
+                  <path id="Trash-Icon" serif:id="Trash Icon" d="M14,5l-1,0l0,9.999c0,0.553 -0.448,1.001 -1,1.001l-9,0c-0.552,0 -1,-0.448 -1,-1.001l0,-9.999l-1,0c-0.552,0 -1,-0.447 -1,-1c0,-0.552 0.448,-1 1,-1l3.05,0c0.245,-1.694 1.688,-3 3.45,-3c1.762,0 3.205,1.306 3.45,3l3.05,0c0.552,0 1,0.448 1,1c0,0.553 -0.448,1 -1,1Zm-7,9l1,0l0,-8l-1,0l0,8Zm-2,-8l-1,0l0,8l1,0l0,-8Zm2.5,-4.5c-0.931,0 -1.706,0.638 -1.929,1.5l3.858,0c-0.223,-0.862 -0.998,-1.5 -1.929,-1.5Zm3.5,4.5l-1,0l0,8l1,0l0,-8Z"></path>
+                </svg>
+              </div>
+              <div class="basket-item"><span class="basket-item__name">Газоблоки D 500 (1,3м3) 600*3 </span><span>* </span><span class="basket-item__price">5200</span>
+                <svg class="basket-item__delete" width="100%" height="100%" viewBox="0 0 16 16">
+                  <path id="Trash-Icon" serif:id="Trash Icon" d="M14,5l-1,0l0,9.999c0,0.553 -0.448,1.001 -1,1.001l-9,0c-0.552,0 -1,-0.448 -1,-1.001l0,-9.999l-1,0c-0.552,0 -1,-0.447 -1,-1c0,-0.552 0.448,-1 1,-1l3.05,0c0.245,-1.694 1.688,-3 3.45,-3c1.762,0 3.205,1.306 3.45,3l3.05,0c0.552,0 1,0.448 1,1c0,0.553 -0.448,1 -1,1Zm-7,9l1,0l0,-8l-1,0l0,8Zm-2,-8l-1,0l0,8l1,0l0,-8Zm2.5,-4.5c-0.931,0 -1.706,0.638 -1.929,1.5l3.858,0c-0.223,-0.862 -0.998,-1.5 -1.929,-1.5Zm3.5,4.5l-1,0l0,8l1,0l0,-8Z"></path>
+                </svg>
+              </div>
+              <div class="basket-result"><span>Total: </span><span class="basket-result__price">11 380</span><a class="buy" href="#">Оформить</a></div>
+            </div>
           </div>
         </div>
       </section>
@@ -114,7 +152,7 @@
                   <div class="slide-title">
                     <h1>База строительных материалов</h1>
                     <p>Все строительные  материалы в одном месте</p>
-                  </div><a class="slide-btn" href="#"><span>В каталог</span></a>
+                  </div><a class="slide-btn" href="katalog-line.html"><span>В каталог</span></a>
                 </div>
               </div>
             </div>
@@ -126,7 +164,7 @@
                   <div class="slide-title">
                     <h1>База строительных материалов</h1>
                     <p>Все строительные  материалы в одном месте</p>
-                  </div><a class="slide-btn" href="#"><span>В каталог</span></a>
+                  </div><a class="slide-btn" href="katalog-line.html"><span>В каталог</span></a>
                 </div>
               </div>
             </div>
