--- a/katalog-coub.html
+++ b/katalog-coub.html
@@ -38,11 +38,11 @@
                       </nav>
                     </li>
                     <li>
-                      <nav id="logo-content"><img src="static/img/content/logo.png" alt="logo">
+                      <nav id="logo-content"><a href="index.html"><img src="static/img/content/logo.png" alt="logo"></a>
                         <p>База строительных материалов</p>
                       </nav>
                     </li>
-                    <li><a class="header-nav__link" href="#">Каталог</a></li>
+                    <li><a class="header-nav__link" href="katalog-line.html">Каталог</a></li>
                     <li><a class="header-nav__link" href="#">О компании</a></li>
                     <li><a class="header-nav__link" href="#">Оптовикам</a></li>
                     <li><a class="header-nav__link" href="#">Доставка</a></li>
@@ -67,8 +67,27 @@
                 <div class="call"><a class="call-phone" href="#"> +7 (342) 281 12 77</a><a class="g-btn" href="#">Обратный звонок</a></div>
               </div>
               <div class="col-2 col-sm-1 d-block d-lg-none">
-                <div class="bag"><img src="static/img/general/bag.png" alt="bag"><span class="count-bag__head">0</span></div>
+                <div class="basket-head"><img class="bag-clear" src="static/img/general/bag-clear.png" alt="Bag-clear"><img class="bag-full" src="static/img/general/bag-add.png" alt="Bag-add"></div>
               </div>
+            </div>
+            <div class="basket-content__head">
+              <div class="basket-title"><span class="basket-count">3 товара </span><span>в корзине</span></div>
+              <div class="basket-item"><span class="basket-item__name">Праймер битумный (20л/16кг) </span><span>* </span><span class="basket-item__price">1080</span>
+                <svg class="basket-item__delete" width="100%" height="100%" viewBox="0 0 16 16">
+                  <path id="Trash-Icon" serif:id="Trash Icon" d="M14,5l-1,0l0,9.999c0,0.553 -0.448,1.001 -1,1.001l-9,0c-0.552,0 -1,-0.448 -1,-1.001l0,-9.999l-1,0c-0.552,0 -1,-0.447 -1,-1c0,-0.552 0.448,-1 1,-1l3.05,0c0.245,-1.694 1.688,-3 3.45,-3c1.762,0 3.205,1.306 3.45,3l3.05,0c0.552,0 1,0.448 1,1c0,0.553 -0.448,1 -1,1Zm-7,9l1,0l0,-8l-1,0l0,8Zm-2,-8l-1,0l0,8l1,0l0,-8Zm2.5,-4.5c-0.931,0 -1.706,0.638 -1.929,1.5l3.858,0c-0.223,-0.862 -0.998,-1.5 -1.929,-1.5Zm3.5,4.5l-1,0l0,8l1,0l0,-8Z"></path>
+                </svg>
+              </div>
+              <div class="basket-item"><span class="basket-item__name">Газоблоки D 500 (1,3м3) 600*3 </span><span>* </span><span class="basket-item__price">5100</span>
+                <svg class="basket-item__delete" width="100%" height="100%" viewBox="0 0 16 16">
+                  <path id="Trash-Icon" serif:id="Trash Icon" d="M14,5l-1,0l0,9.999c0,0.553 -0.448,1.001 -1,1.001l-9,0c-0.552,0 -1,-0.448 -1,-1.001l0,-9.999l-1,0c-0.552,0 -1,-0.447 -1,-1c0,-0.552 0.448,-1 1,-1l3.05,0c0.245,-1.694 1.688,-3 3.45,-3c1.762,0 3.205,1.306 3.45,3l3.05,0c0.552,0 1,0.448 1,1c0,0.553 -0.448,1 -1,1Zm-7,9l1,0l0,-8l-1,0l0,8Zm-2,-8l-1,0l0,8l1,0l0,-8Zm2.5,-4.5c-0.931,0 -1.706,0.638 -1.929,1.5l3.858,0c-0.223,-0.862 -0.998,-1.5 -1.929,-1.5Zm3.5,4.5l-1,0l0,8l1,0l0,-8Z"></path>
+                </svg>
+              </div>
+              <div class="basket-item"><span class="basket-item__name">Газоблоки D 500 (1,3м3) 600*3 </span><span>* </span><span class="basket-item__price">5200</span>
+                <svg class="basket-item__delete" width="100%" height="100%" viewBox="0 0 16 16">
+                  <path id="Trash-Icon" serif:id="Trash Icon" d="M14,5l-1,0l0,9.999c0,0.553 -0.448,1.001 -1,1.001l-9,0c-0.552,0 -1,-0.448 -1,-1.001l0,-9.999l-1,0c-0.552,0 -1,-0.447 -1,-1c0,-0.552 0.448,-1 1,-1l3.05,0c0.245,-1.694 1.688,-3 3.45,-3c1.762,0 3.205,1.306 3.45,3l3.05,0c0.552,0 1,0.448 1,1c0,0.553 -0.448,1 -1,1Zm-7,9l1,0l0,-8l-1,0l0,8Zm-2,-8l-1,0l0,8l1,0l0,-8Zm2.5,-4.5c-0.931,0 -1.706,0.638 -1.929,1.5l3.858,0c-0.223,-0.862 -0.998,-1.5 -1.929,-1.5Zm3.5,4.5l-1,0l0,8l1,0l0,-8Z"></path>
+                </svg>
+              </div>
+              <div class="basket-result"><span>Total: </span><span class="basket-result__price">11 380</span><a class="buy" href="#">Оформить</a></div>
             </div>
           </div>
         </div>
@@ -93,11 +112,11 @@
                   <div class="category-title"><span>Сети</span></div>
                   <div class="category-content"><a href="#">Утеплитель</a><a href="#">Гидроизоляция</a><a href="#">Прочее</a></div>
                 </div>
-              </div><a class="item-download__line" href="#">
+              </div><a class="item-download__line d-none d-md-block" href="#">
                 <div class="item-img__line"><img src="static/img/content/cloud.png" alt="cloud"></div>
                 <div class="item-download__desc-line">
                   <p>Прайс</p><span>Скачать файл в формате xls</span>
-                </div></a><a class="item-download__line item-kp" href="#">
+                </div></a><a class="item-download__line item-kp d-none d-md-block" href="#">
                 <div class="item-img__line"><img src="static/img/content/notepad.png" alt="notepad"></div>
                 <div class="item-download__desc-line">
                   <p>Коммерческое предложение</p><span>Скачать файл в формате PDF</span>
@@ -121,11 +140,7 @@
 </svg></a><a class="tabs-item" href="katalog-line.html"><svg width="100%" height="100%" viewBox="0 0 16 14">
 <path id="List-Icon" serif:id="List Icon" d="M15,10l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1.001 1,-1.001l10,0c0.552,0 1,0.448 1,1.001c0,0.552 -0.448,1 -1,1Zm0,-4l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1l10,0c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1Zm0,-4l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.552 0.448,-1 1,-1l10,0c0.552,0 1,0.448 1,1c0,0.552 -0.448,1 -1,1Zm-14,12c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1Zm0,-4c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1.001 1,-1.001c0.552,0 1,0.448 1,1.001c0,0.552 -0.448,1 -1,1Zm0,-4c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1Zm0,-4c-0.552,0 -1,-0.448 -1,-1c0,-0.552 0.448,-1 1,-1c0.552,0 1,0.448 1,1c0,0.552 -0.448,1 -1,1Zm4,10l10,0c0.552,0 1,0.447 1,1c0,0.552 -0.448,1 -1,1l-10,0c-0.552,0 -1,-0.448 -1,-1c0,-0.553 0.448,-1 1,-1Z"/>
 </svg></a></div>
-                  <div class="basket">
-                    <svg width="100%" height="100%">
-                      <path id="Cart-Plus-Icon" serif:id="Cart Plus Icon" d="M20.992,14.001c-3.866,0 -7,-3.135 -7,-7.001c0,-3.865 3.134,-6.999 7,-6.999c3.866,0 7,3.134 7,6.999c0,3.866 -3.134,7.001 -7,7.001Zm3,-8.001l-2,0l0,-1.999c0,-0.553 -0.448,-1 -1,-1c-0.553,0 -1,0.447 -1,1l0,1.999l-2,0c-0.553,0 -1,0.448 -1,1c0,0.553 0.447,1.001 1,1.001l2,0l0,1.999c0,0.553 0.447,1 1,1c0.552,0 1,-0.447 1,-1l0,-1.999l2,0c0.552,0 1,-0.448 1,-1.001c0,-0.552 -0.448,-1 -1,-1Zm-12,-3.999c-2.209,0 -4,1.791 -4,3.999l0,2.99l4.228,0c0.906,4.012 4.486,7.01 8.772,7.01c0.679,0 1.339,-0.081 1.975,-0.224l0.988,6.336c0.088,0.484 -0.025,0.933 -0.328,1.312c-0.303,0.379 -0.709,0.576 -1.184,0.576l-20.902,0c-0.475,0 -0.881,-0.197 -1.184,-0.576c-0.303,-0.379 -0.416,-0.828 -0.328,-1.312l1.843,-11.821c0.138,-0.764 0.762,-1.301 1.512,-1.301l2.608,0l0,-2.99c0,-3.313 2.686,-6 6,-6c0.951,0 1.838,0.242 2.637,0.635c-0.486,0.487 -0.909,1.034 -1.274,1.62c-0.427,-0.156 -0.882,-0.254 -1.363,-0.254Zm-4,7l-2,0l0,2.277c-0.596,0.346 -1,0.984 -1,1.723c0,1.104 0.895,1.999 2,1.999c1.104,0 2,-0.895 2,-1.999c0,-0.739 -0.405,-1.377 -1,-1.723l0,-2.277Z"></path>
-                    </svg>
-                  </div>
+                  <div class="basket d-none d-lg-inline-block"><img class="bag-clear" src="static/img/general/bag-clear.png" alt="Bag-clear"><img class="bag-full" src="static/img/general/bag-add.png" alt="Bag-add"></div>
                   <div class="search-button"><img src="static/img/content/search.png" alt="search"></div>
                   <div class="search-content__sort">
                     <input class="search-input" type="text" name="text" placeholder="Поиск по каталогу">
