--- a/index.html
+++ b/index.html
@@ -181,19 +181,21 @@
                     <p>Поиск товаров</p>
                   </div>
                 </div>
-                <div class="col-6 col-lg-7 d-none d-sm-block">
-                  <input class="search-input" type="text" name="text" placeholder="Например: строительная смесь">
-                </div>
-                <div class="col-3 col-lg-2 d-none d-sm-block">
-                  <label for="btn">
-                    <input class="g-btn" id="btn" type="submit" value="Подобрать">
-                  </label>
+                <div class="col-9 d-none d-sm-block">
+                  <form>
+                    <input class="search-input" type="text" name="text" placeholder="Например: строительная смесь">
+                    <label for="btn">
+                      <input class="g-btn" id="btn" type="submit" value="Подобрать">
+                    </label>
+                  </form>
                 </div>
                 <div class="col-11 d-block d-sm-none">
-                  <input class="search-input" type="text" name="text" placeholder="Поиск по каталогу">
-                  <label for="btn">
-                    <input class="g-btn" id="btn" type="submit" value="">
-                  </label>
+                  <form>
+                    <input class="search-input" type="text" name="text" placeholder="Поиск по каталогу">
+                    <label for="btn">
+                      <input class="g-btn" id="btn" type="submit" value="">
+                    </label>
+                  </form>
                 </div>
               </div>
             </div>
@@ -355,12 +357,12 @@
               <div class="sub-content">
                 <p class="sub-title">Будь в курсе</p>
                 <p class="sub-desc">Узнавай о скидках и акциях первым</p>
-                <div class="sub-input">
+                <form class="sub-input">
                   <input type="text" name="email" placeholder="Введите ваш email">
                   <label for="btn">
                     <input class="g-btn" id="btn" type="submit" value="Подписаться">
                   </label>
-                </div>
+                </form>
               </div>
             </div>
           </div>
