--- a/katalog-coub.html
+++ b/katalog-coub.html
@@ -16,10 +16,10 @@
         <div class="header">
           <div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
-              <div class="col-md-2 col-lg-1">
-                <div class="logo d-none d-md-block"><a href="index.html"><img src="static/img/content/logo.png" alt="logo"></a></div>
+              <div class="col-sm-2 col-md-1">
+                <div class="logo d-none d-sm-block"><a href="index.html"><img src="static/img/content/logo.png" alt="logo"></a></div>
               </div>
-              <div class="col-2 col-md-6 col-lg-6 col-xl-4">
+              <div class="col-2 col-md-7 col-lg-6 col-xl-4">
                 <ul class="header-nav d-none d-md-block">
                   <li><a class="header-nav__link" href="#">О компании</a></li>
                   <li><a class="header-nav__link" href="#">Оптовикам</a></li>
