--- a/katalog-line.html
+++ b/katalog-line.html
@@ -16,10 +16,10 @@
         <div class="header">
           <div class="container h-100">
             <div class="row h-100 justify-content-center align-items-center">
-              <div class="col-md-2 col-lg-1">
-                <div class="logo d-none d-md-block"><a href="index.html"><img src="static/img/content/logo.png" alt="logo"></a></div>
+              <div class="col-sm-2 col-md-1">
+                <div class="logo d-none d-sm-block"><a href="index.html"><img src="static/img/content/logo.png" alt="logo"></a></div>
               </div>
-              <div class="col-2 col-md-6 col-lg-6 col-xl-4">
+              <div class="col-2 col-md-7 col-lg-6 col-xl-4">
                 <ul class="header-nav d-none d-md-block">
                   <li><a class="header-nav__link" href="#">О компании</a></li>
                   <li><a class="header-nav__link" href="#">Оптовикам</a></li>
@@ -190,7 +190,7 @@
                       <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
                     </div>
                     <div class="product-active">
-                      <div class="product-counter">
+                      <div class="product-counter d-none">
                         <input type="text" name="text" placeholder="1">
                         <label class="up" for="up">
                           <input id="up" type="submit" value="">
@@ -199,7 +199,11 @@
                           <input id="down" type="submit" value="">
                         </label>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
+                      <div class="product-price">
+                        <svg class="svg-inline--fa fa-cart-plus fa-w-18" aria-hidden="true" data-prefix="fas" data-icon="cart-plus" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 576 512">
+                          <path fill="#ffffff" d="M504.717 320H211.572l6.545 32h268.418c15.401 0 26.816 14.301 23.403 29.319l-5.517 24.276C523.112 414.668 536 433.828 536 456c0 31.202-25.519 56.444-56.824 55.994-29.823-.429-54.35-24.631-55.155-54.447-.44-16.287 6.085-31.049 16.803-41.548H231.176C241.553 426.165 248 440.326 248 456c0 31.813-26.528 57.431-58.67 55.938-28.54-1.325-51.751-24.385-53.251-52.917-1.158-22.034 10.436-41.455 28.051-51.586L93.883 64H24C10.745 64 0 53.255 0 40V24C0 10.745 10.745 0 24 0h102.529c11.401 0 21.228 8.021 23.513 19.19L159.208 64H551.99c15.401 0 26.816 14.301 23.403 29.319l-47.273 208C525.637 312.246 515.923 320 504.717 320zM408 168h-48v-40c0-8.837-7.163-16-16-16h-16c-8.837 0-16 7.163-16 16v40h-48c-8.837 0-16 7.163-16 16v16c0 8.837 7.163 16 16 16h48v40c0 8.837 7.163 16 16 16h16c8.837 0 16-7.163 16-16v-40h48c8.837 0 16-7.163 16-16v-16c0-8.837-7.163-16-16-16z"></path>
+                        </svg><a href="#">1080,00 руб</a>
+                      </div>
                     </div>
                   </div>
                   <div class="product-line clearfix">
@@ -209,7 +213,7 @@
                       <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
                     </div>
                     <div class="product-active">
-                      <div class="product-counter">
+                      <div class="product-counter d-none">
                         <input type="text" name="text" placeholder="1">
                         <label class="up" for="up">
                           <input id="up" type="submit" value="">
@@ -218,7 +222,11 @@
                           <input id="down" type="submit" value="">
                         </label>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
+                      <div class="product-price">
+                        <svg class="svg-inline--fa fa-cart-plus fa-w-18" aria-hidden="true" data-prefix="fas" data-icon="cart-plus" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 576 512">
+                          <path fill="#ffffff" d="M504.717 320H211.572l6.545 32h268.418c15.401 0 26.816 14.301 23.403 29.319l-5.517 24.276C523.112 414.668 536 433.828 536 456c0 31.202-25.519 56.444-56.824 55.994-29.823-.429-54.35-24.631-55.155-54.447-.44-16.287 6.085-31.049 16.803-41.548H231.176C241.553 426.165 248 440.326 248 456c0 31.813-26.528 57.431-58.67 55.938-28.54-1.325-51.751-24.385-53.251-52.917-1.158-22.034 10.436-41.455 28.051-51.586L93.883 64H24C10.745 64 0 53.255 0 40V24C0 10.745 10.745 0 24 0h102.529c11.401 0 21.228 8.021 23.513 19.19L159.208 64H551.99c15.401 0 26.816 14.301 23.403 29.319l-47.273 208C525.637 312.246 515.923 320 504.717 320zM408 168h-48v-40c0-8.837-7.163-16-16-16h-16c-8.837 0-16 7.163-16 16v40h-48c-8.837 0-16 7.163-16 16v16c0 8.837 7.163 16 16 16h48v40c0 8.837 7.163 16 16 16h16c8.837 0 16-7.163 16-16v-40h48c8.837 0 16-7.163 16-16v-16c0-8.837-7.163-16-16-16z"></path>
+                        </svg><a href="#">1080,00 руб</a>
+                      </div>
                     </div>
                   </div>
                   <div class="product-line clearfix">
@@ -228,7 +236,7 @@
                       <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
                     </div>
                     <div class="product-active">
-                      <div class="product-counter">
+                      <div class="product-counter d-none">
                         <input type="text" name="text" placeholder="1">
                         <label class="up" for="up">
                           <input id="up" type="submit" value="">
@@ -237,7 +245,11 @@
                           <input id="down" type="submit" value="">
                         </label>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
+                      <div class="product-price">
+                        <svg class="svg-inline--fa fa-cart-plus fa-w-18" aria-hidden="true" data-prefix="fas" data-icon="cart-plus" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 576 512">
+                          <path fill="#ffffff" d="M504.717 320H211.572l6.545 32h268.418c15.401 0 26.816 14.301 23.403 29.319l-5.517 24.276C523.112 414.668 536 433.828 536 456c0 31.202-25.519 56.444-56.824 55.994-29.823-.429-54.35-24.631-55.155-54.447-.44-16.287 6.085-31.049 16.803-41.548H231.176C241.553 426.165 248 440.326 248 456c0 31.813-26.528 57.431-58.67 55.938-28.54-1.325-51.751-24.385-53.251-52.917-1.158-22.034 10.436-41.455 28.051-51.586L93.883 64H24C10.745 64 0 53.255 0 40V24C0 10.745 10.745 0 24 0h102.529c11.401 0 21.228 8.021 23.513 19.19L159.208 64H551.99c15.401 0 26.816 14.301 23.403 29.319l-47.273 208C525.637 312.246 515.923 320 504.717 320zM408 168h-48v-40c0-8.837-7.163-16-16-16h-16c-8.837 0-16 7.163-16 16v40h-48c-8.837 0-16 7.163-16 16v16c0 8.837 7.163 16 16 16h48v40c0 8.837 7.163 16 16 16h16c8.837 0 16-7.163 16-16v-40h48c8.837 0 16-7.163 16-16v-16c0-8.837-7.163-16-16-16z"></path>
+                        </svg><a href="#">1080,00 руб</a>
+                      </div>
                     </div>
                   </div>
                   <div class="product-line clearfix">
@@ -247,7 +259,7 @@
                       <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
                     </div>
                     <div class="product-active">
-                      <div class="product-counter">
+                      <div class="product-counter d-none">
                         <input type="text" name="text" placeholder="1">
                         <label class="up" for="up">
                           <input id="up" type="submit" value="">
@@ -256,7 +268,11 @@
                           <input id="down" type="submit" value="">
                         </label>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
+                      <div class="product-price">
+                        <svg class="svg-inline--fa fa-cart-plus fa-w-18" aria-hidden="true" data-prefix="fas" data-icon="cart-plus" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 576 512">
+                          <path fill="#ffffff" d="M504.717 320H211.572l6.545 32h268.418c15.401 0 26.816 14.301 23.403 29.319l-5.517 24.276C523.112 414.668 536 433.828 536 456c0 31.202-25.519 56.444-56.824 55.994-29.823-.429-54.35-24.631-55.155-54.447-.44-16.287 6.085-31.049 16.803-41.548H231.176C241.553 426.165 248 440.326 248 456c0 31.813-26.528 57.431-58.67 55.938-28.54-1.325-51.751-24.385-53.251-52.917-1.158-22.034 10.436-41.455 28.051-51.586L93.883 64H24C10.745 64 0 53.255 0 40V24C0 10.745 10.745 0 24 0h102.529c11.401 0 21.228 8.021 23.513 19.19L159.208 64H551.99c15.401 0 26.816 14.301 23.403 29.319l-47.273 208C525.637 312.246 515.923 320 504.717 320zM408 168h-48v-40c0-8.837-7.163-16-16-16h-16c-8.837 0-16 7.163-16 16v40h-48c-8.837 0-16 7.163-16 16v16c0 8.837 7.163 16 16 16h48v40c0 8.837 7.163 16 16 16h16c8.837 0 16-7.163 16-16v-40h48c8.837 0 16-7.163 16-16v-16c0-8.837-7.163-16-16-16z"></path>
+                        </svg><a href="#">1080,00 руб</a>
+                      </div>
                     </div>
                   </div>
                   <div class="product-line clearfix">
@@ -266,7 +282,7 @@
                       <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
                     </div>
                     <div class="product-active">
-                      <div class="product-counter">
+                      <div class="product-counter d-none">
                         <input type="text" name="text" placeholder="1">
                         <label class="up" for="up">
                           <input id="up" type="submit" value="">
@@ -275,7 +291,11 @@
                           <input id="down" type="submit" value="">
                         </label>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
+                      <div class="product-price">
+                        <svg class="svg-inline--fa fa-cart-plus fa-w-18" aria-hidden="true" data-prefix="fas" data-icon="cart-plus" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 576 512">
+                          <path fill="#ffffff" d="M504.717 320H211.572l6.545 32h268.418c15.401 0 26.816 14.301 23.403 29.319l-5.517 24.276C523.112 414.668 536 433.828 536 456c0 31.202-25.519 56.444-56.824 55.994-29.823-.429-54.35-24.631-55.155-54.447-.44-16.287 6.085-31.049 16.803-41.548H231.176C241.553 426.165 248 440.326 248 456c0 31.813-26.528 57.431-58.67 55.938-28.54-1.325-51.751-24.385-53.251-52.917-1.158-22.034 10.436-41.455 28.051-51.586L93.883 64H24C10.745 64 0 53.255 0 40V24C0 10.745 10.745 0 24 0h102.529c11.401 0 21.228 8.021 23.513 19.19L159.208 64H551.99c15.401 0 26.816 14.301 23.403 29.319l-47.273 208C525.637 312.246 515.923 320 504.717 320zM408 168h-48v-40c0-8.837-7.163-16-16-16h-16c-8.837 0-16 7.163-16 16v40h-48c-8.837 0-16 7.163-16 16v16c0 8.837 7.163 16 16 16h48v40c0 8.837 7.163 16 16 16h16c8.837 0 16-7.163 16-16v-40h48c8.837 0 16-7.163 16-16v-16c0-8.837-7.163-16-16-16z"></path>
+                        </svg><a href="#">1080,00 руб</a>
+                      </div>
                     </div>
                   </div>
                   <div class="product-line clearfix">
@@ -285,7 +305,7 @@
                       <div class="product-desc"><span>Единица измерения: </span><span class="qt">шт </span><span>Фасовка: </span><span class="par">Не указано</span></div>
                     </div>
                     <div class="product-active">
-                      <div class="product-counter">
+                      <div class="product-counter d-none">
                         <input type="text" name="text" placeholder="1">
                         <label class="up" for="up">
                           <input id="up" type="submit" value="">
@@ -294,7 +314,11 @@
                           <input id="down" type="submit" value="">
                         </label>
                       </div>
-                      <div class="product-price"><a href="#">1080,00 руб</a></div>
+                      <div class="product-price">
+                        <svg class="svg-inline--fa fa-cart-plus fa-w-18" aria-hidden="true" data-prefix="fas" data-icon="cart-plus" role="img" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 576 512">
+                          <path fill="#ffffff" d="M504.717 320H211.572l6.545 32h268.418c15.401 0 26.816 14.301 23.403 29.319l-5.517 24.276C523.112 414.668 536 433.828 536 456c0 31.202-25.519 56.444-56.824 55.994-29.823-.429-54.35-24.631-55.155-54.447-.44-16.287 6.085-31.049 16.803-41.548H231.176C241.553 426.165 248 440.326 248 456c0 31.813-26.528 57.431-58.67 55.938-28.54-1.325-51.751-24.385-53.251-52.917-1.158-22.034 10.436-41.455 28.051-51.586L93.883 64H24C10.745 64 0 53.255 0 40V24C0 10.745 10.745 0 24 0h102.529c11.401 0 21.228 8.021 23.513 19.19L159.208 64H551.99c15.401 0 26.816 14.301 23.403 29.319l-47.273 208C525.637 312.246 515.923 320 504.717 320zM408 168h-48v-40c0-8.837-7.163-16-16-16h-16c-8.837 0-16 7.163-16 16v40h-48c-8.837 0-16 7.163-16 16v16c0 8.837 7.163 16 16 16h48v40c0 8.837 7.163 16 16 16h16c8.837 0 16-7.163 16-16v-40h48c8.837 0 16-7.163 16-16v-16c0-8.837-7.163-16-16-16z"></path>
+                        </svg><a href="#">1080,00 руб</a>
+                      </div>
                     </div>
                   </div>
                 </div>
