--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </section>
       <section class="slider d-none d-md-block">
         <div class="js-slider">
-          <div class="slide">
+          <div class="slide" style="background-image: url(static/img/content/slide.png);">
             <div class="container h-100">
               <div class="row h-100 justify-content-center align-items-center">
                 <div class="col-8">
@@ -158,7 +158,7 @@
               </div>
             </div>
           </div>
-          <div class="slide">
+          <div class="slide" style="background-image: url(static/img/content/slide.png);">
             <div class="container h-100">
               <div class="row h-100 justify-content-center align-items-center">
                 <div class="col-8">
@@ -170,7 +170,7 @@
               </div>
             </div>
           </div>
-          <div class="slide">
+          <div class="slide" style="background-image: url(static/img/content/slide.png);">
             <div class="container h-100">
               <div class="row h-100 justify-content-center align-items-center">
                 <div class="col-8">
@@ -198,7 +198,7 @@
                   <form>
                     <input class="search-input" type="text" name="text" placeholder="Например: строительная смесь">
                     <label for="btn">
-                      <input class="g-btn d-none d-sm-block" id="btn" type="submit" value="Подобрать">
+                      <input class="g-btn" id="btn" type="submit" value="Подобрать">
                     </label>
                   </form>
                 </div>
@@ -206,7 +206,7 @@
                   <form>
                     <input class="search-input" type="text" name="text" placeholder="Поиск по каталогу">
                     <label for="btn">
-                      <input class="g-btn" id="btn" type="submit" value="">
+                      <input class="g-btn d-none d-sm-block" id="btn" type="submit" value="">
                     </label>
                   </form>
                 </div>
